--- a/src/Frontend/src/components/flashcards/Flashcards/OpenedFlashcard/openedFlashcard.less
+++ b/src/Frontend/src/components/flashcards/Flashcards/OpenedFlashcard/openedFlashcard.less
@@ -92,7 +92,7 @@
   color: @additionalColor;
 }
 
-@media (max-width: @maxPhoneWidth) {
+@media (max-width: @minLaptopWidth) {
   .questionFront {
     font-size: 26px;
   }
