--- a/src/Frontend/src/components/flashcards/Flashcards/Results/results.less
+++ b/src/Frontend/src/components/flashcards/Flashcards/Results/results.less
@@ -61,7 +61,7 @@
   margin-right: 15px;
 }
 
-@media (max-width: @maxPhoneWidth) {
+@media (max-width: @minLaptopWidth) {
   .headerText {
     text-align: center;
   }
