--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -3,10 +3,22 @@
 @maxTabletWidth: 991px;
 @maxPhoneWidth: 767px;
 
+@desktopSlideWidth: 1080px;
+@laptopSlideWidth: 880px;
+@tabletSlideWidth: 752px;
+@mobileSlideWidth: 100%;
+
+@minDesktopWidth: 1600px;
+@minLaptopWidth: 1280px;
+@minTabletWidth: 800px;
+
+@navigationGrowthWidth: 1366px;
+
 @navigationMenuWidth: 250px;
 @maxNavigationMenuWidth: 360px;
 
 @headerHeight: 50px;
+@headerDividerHeight: 2px;
 
 @headerZIndex: 7;
 @asideZIndex: 6;
@@ -15,6 +27,7 @@
 
 @defaultFonts: "Segoe UI", "Helvetica Neue", Roboto, Arial, sans-serif;
 
+@black: #333333;
 @negativeColor: #CE0014;
 @likeColor: #D70C17;
 @accentColor: #F69C00;
@@ -22,13 +35,17 @@
 @successColor: #228007;
 @progressBarGreen: #3F9726;
 @green: #5cb85c;
+@darkBlue: #026eb0;
+@grayBlue: #0e77c4;
 @blue: #0087d5;
 @lightBlue: #4C8DD9;
-@progressBarBlue: #1D85D0;
+@blueSmoke: #1D85D0;
+@progressBarBlue: @blueSmoke;
 @lightViolet: #C8C7FE;
 @linkColor: #3072C4;
 @linkHoverColor: #23527c;
 @dimgray: #696969;
+@greySmoke: #e1e1e1;
 @lightGrey: #E5E5E5;
 @grey: #717171;
 @darkGrey: #616161;
@@ -39,6 +56,8 @@
 @borderColor: #E5E5E5;
 @darkGrey: #C4C4C4;
 @whiteSmoke: #F2F2F2;
+@grayWhite: #f4f4f4;
+@white: #ffffff;
 @backgroundGray: @whiteSmoke;
 
 @flashcardUnitBackgroundBlue: @lightBlue;
