--- a/src/Frontend/src/components/course/Navigation/Course/Flashcards/Flashcards.less
+++ b/src/Frontend/src/components/course/Navigation/Course/Flashcards/Flashcards.less
@@ -58,16 +58,12 @@
   .open :local {
     .root {
       left: 0;
-
-      @media (min-width: @maxContentWidth) {
-        left: calc((100vw - @maxContentWidth) / 2);
-      }
     }
   }
 }
 
 
-@media (min-width: @maxPhoneWidth) {
+@media (min-width: @minLaptopWidth) {
   .root {
     left: 0;
     transition: none;
@@ -75,7 +71,7 @@
 }
 
 
-@media (min-width: @maxLaptopWidth) {
+@media (min-width: @navigationGrowthWidth) {
   .root {
     width: 360px;
     padding: 13px 12px 20px 24px;
@@ -88,7 +84,6 @@
 
 @media (min-width: @maxContentWidth) {
   .root {
-    left: calc((100vw - @maxContentWidth) / 2);
     border-right: 1px solid @borderColor;
   }
 }
