--- a/src/Frontend/src/components/flashcards/Flashcards/flashcards.less
+++ b/src/Frontend/src/components/flashcards/Flashcards/flashcards.less
@@ -161,8 +161,10 @@
   width: 100%;
 }
 
-@media (max-width: @maxPhoneWidth) {
+@media (max-width: @minLaptopWidth) {
   .modal {
+    width: 100vw;
+    max-width: 100vw;
     height: calc(100vh - @headerHeight - @progressBarHeight);
     top: 0;
     transform: translate(-50%, @headerHeight + @progressBarHeight);
