--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1522,20 +1522,39 @@ body.lti-component {
 	max-width: 100%;
 }
 
-.legacy-page .slide ul :not(.slides) {
+.legacy-page .slide ul {
 	margin-bottom: 1em;
 	padding: 0;
 	list-style: none;
 }
 
-.legacy-page .slide ul :not(.slides) li {
+.legacy-page .slide ul li {
 	position: relative;
 	padding-left: 1.5em;
 	margin-bottom: 0.5em;
 }
 
-.legacy-page .slide ul :not(.slides) li:before {
+.legacy-page .slide ul li:before {
 	content: '—';
 	position: absolute;
 	left: 0;
+}
+
+/* overwriting styles for flexslider to remove bullets*/
+.legacy-page .slide .flexslider ul {
+	margin-bottom: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.legacy-page .slide .flexslider ul li {
+	position: unset;
+	padding-left: 0;
+	margin-bottom: 0;
+}
+
+.legacy-page .slide .flexslider ul li:before {
+	content: unset;
+	position: unset;
+	left: unset;
 }
