--- a/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
@@ -68,7 +68,7 @@
 <div class="analytics__dashboard">
 @using (Html.BeginForm("UnitStatistics", "Analytics", FormMethod.Get, new { @class = "form-inline", id = "unit-statistics-filter-form" }))
 {
-	@Html.Hidden("courseId", Model.Course.Id)
+	@Html.Hidden("courseId", Model.CourseId)
 
 	<div id="filters" class="hidden-xs-inline">
 		<div class="form-group">
@@ -87,7 +87,7 @@
 
 		@Html.Partial("~/Views/Shared/_GroupsFilter.cshtml", new GroupsFilterViewModel
 		{
-			CourseId = Model.Course.Id,
+			CourseId = Model.CourseId,
 			SelectedGroupsIds = Model.SelectedGroupsIds,
 			Groups = Model.Groups,
 		})
@@ -131,7 +131,7 @@
 						<span class="navbar-label navbar-label-link glyphicon glyphicon-none"></span>
 					}
 
-					@Html.RouteLink(slide.Title.TruncateWithEllipsis(35), "Course.SlideById", new { Model.Course.Id, SlideId = slide.Url }, new { })
+					@Html.RouteLink(slide.Title.TruncateWithEllipsis(35), "Course.SlideById", new { Model.CourseId, SlideId = slide.Url }, new { })
 					<div class="pull-right">
 						<span class="slide-visits-count">
 							@Model.SlidesVisits.GetOrDefault(slide.Id, new List<Visit>()).Count
@@ -251,7 +251,7 @@
 
 				<tr class="student">
 					<td class="small-table__student-name-cell" title="@userInfo.UserName">
-						@Html.ActionLink(userVisibleName.TruncateWithEllipsis(25), "UserUnitStatistics", new { courseId = Model.Course.Id, unitId = Model.Unit.Id, userId = userInfo.UserId }, new { title = "Посмотреть статистику пользователя " + userInfo.UserName })
+						@Html.ActionLink(userVisibleName.TruncateWithEllipsis(25), "UserUnitStatistics", new { courseId = Model.CourseId, unitId = Model.Unit.Id, userId = userInfo.UserId }, new { title = "Посмотреть статистику пользователя " + userInfo.UserName })
 					</td>
 					<td class="small-table__student-progress-cell hidden-xs-table-cell">
 						<div class="student-progress progress">
@@ -292,7 +292,7 @@
 										visit.Score.ToString(),
 										"UserSolutions",
 										"Analytics",
-										new { courseId = Model.Course.Id, slideId = exerciseOrQuiz.Id, userId = userInfo.UserId },
+										new { courseId = Model.CourseId, slideId = exerciseOrQuiz.Id, userId = userInfo.UserId },
 										new { title = "Посмотреть решения", target = "_blank" })
 								}
 								else
@@ -330,7 +330,7 @@
 										max="@scoringGroup.MaxAdditionalScore"
 										value="@(Model.AdditionalScores.ContainsKey(userAndScoringGroup) ? Model.AdditionalScores[userAndScoringGroup].ToString() : "")"
 										data-scoring-type="@scoringGroup.Id"
-										data-url="@Url.Action("SetAdditionalScore", "Admin", new { courseId = Model.Course.Id, unitId = Model.Unit.Id, userId = userInfo.UserId, scoringGroupId = scoringGroup.Id })"/>
+										data-url="@Url.Action("SetAdditionalScore", "Admin", new { courseId = Model.CourseId, unitId = Model.Unit.Id, userId = userInfo.UserId, scoringGroupId = scoringGroup.Id })"/>
 							}
 						</td>
 					}
