Typos on main page

--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
 					обобщёнными типами (generics),
 					генераторами последовательностей,
 					LINQ,
-					а также с джентельменским набором алгоритмов и структур данных.
+					а также с джентльменским набором алгоритмов и структур данных.
 					Рассчитан на людей, знакомых с основами синтаксиса C#.
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming2" }, new { @class = "btn btn-primary" })</p>
@@ -101,7 +101,7 @@
 				Длительность миникурса: 2 часа.
 				<p>
 					Короткий курс-практикум, развивающий навык быстрой оценки сложности
-					алгоримов и кода, который ежедневно пишут программисты.
+					алгоритмов и кода, который ежедневно пишут программисты.
 				</p>
 				<p>
 					Курс содержит самый минимум теории и построен вокруг серии хорошо
