Added temporary ract-ui tooptip FIX

--- a/src/Frontend/src/common.less
+++ b/src/Frontend/src/common.less
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
+
+:global(.react-ui) {
+  * {
+    box-sizing: initial;
+  }
+}
+
 body {
   font-family: "Segoe UI", "Helvetica Neue", Roboto, Arial, sans-serif;
 }
