--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -181,10 +181,29 @@
 
 .legacy-page .revealed {
 	background-color: #e7f1ff;
-	padding: 20px;
 	color: #000 !important;
-	margin-left: -20px;
-	margin-right: -20px;
+	margin: -16px -24px;
+	padding: 16px 24px;
+}
+
+@media (min-width: 800px) {
+	.legacy-page .revealed {
+		margin: -24px;
+		padding: 24px;
+		border-radius: 24px;
+	}
+}
+@media (min-width: 1280px) {
+	.legacy-page .revealed {
+		margin: -40px -40px -40px -56px;
+		padding: 40px 40px 40px 56px;
+	}
+}
+@media (min-width: 1600px) {
+	.legacy-page .revealed {
+		margin: -40px -56px -40px -56px;
+		padding: -40px -56px -40px -56px;
+	}
 }
 
 .legacy-page .revealed .CodeMirror {
