Changed colors according to kontur guides

--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -35,8 +35,8 @@
 @successColor: #228007;
 @progressBarGreen: #3F9726;
 @green: #5cb85c;
-@darkBlue: #026eb0;
-@grayBlue: #0e77c4;
+@darkBlue: #1974B6;
+@grayBlue: #1B7DC3;
 @blue: #0087d5;
 @lightBlue: #4C8DD9;
 @blueSmoke: #1D85D0;
@@ -45,7 +45,7 @@
 @linkColor: #3072C4;
 @linkHoverColor: #23527c;
 @dimgray: #696969;
-@greySmoke: #e1e1e1;
+@greySmoke: #E1E1E1;
 @lightGrey: #E5E5E5;
 @grey: #717171;
 @darkGrey: #616161;
@@ -53,11 +53,11 @@
 @disabledColor: #A0A0A0;
 @metroDefault: #C4C4C4;
 @geinsboro: #DADADA;
-@borderColor: #E5E5E5;
+@borderColor: @lightGrey;
 @darkGrey: #C4C4C4;
 @whiteSmoke: #F2F2F2;
-@grayWhite: #f4f4f4;
-@white: #ffffff;
+@grayWhite: #F4F4F4;
+@white: #FFFFFF;
 @backgroundGray: @whiteSmoke;
 
 @flashcardUnitBackgroundBlue: @lightBlue;
