--- a/src/uLearn.Web/Content/notifications.css
+++ b/src/uLearn.Web/Content/notifications.css
@@ -44,6 +44,7 @@
 
 .notifications__feed-switcher a {
 	display: inline-block;
+	box-sizing: border-box;
 	font-size: 16px;
 	padding: 10px;
 	width: 50%;
