--- a/src/uLearn.Web/Views/Shared/DisplayTemplates/ImageGaleryBlock.cshtml
+++ b/src/uLearn.Web/Views/Shared/DisplayTemplates/ImageGaleryBlock.cshtml
@@ -1,14 +1,10 @@
-﻿@using Ulearn.Core.Courses.Slides
-@model Ulearn.Core.Courses.Slides.Blocks.ImageGalleryBlock
+﻿@model Ulearn.Core.Courses.Slides.Blocks.ImageGalleryBlock
 <div class="flexslider">
 	<ul class="slides">
-		@{
-			var baseUrl = ((Slide)ViewBag.Slide).Info.DirectoryRelativePath;
-		}
 		@foreach (var imageUrl in Model.ImageUrls)
 		{
 			<li>
-				<img src="@string.Format("{0}/{1}", baseUrl, imageUrl)" alt="@imageUrl"/>
+				<img src="@imageUrl" alt="@imageUrl"/>
 			</li>
 		}
 	</ul>
