--- a/src/uLearn.Web/Content/antiplagiarism.css
+++ b/src/uLearn.Web/Content/antiplagiarism.css
@@ -40,6 +40,7 @@
 
 .antiplagiarism-status.not-checked {
     background-color: #eaf5e5;
+	border-radius: 8px;
 }
 
 .antiplagiarism-status.found-none,
