--- a/src/uLearn.Web/Content/code_review.css
+++ b/src/uLearn.Web/Content/code_review.css
@@ -94,31 +94,7 @@
 }
 
 .legacy-page .code-review + .CodeMirror {
-	width: 900px;
-}
-
-@media (max-width: 1200px) {
-	.legacy-page .code-review + .CodeMirror {
-		width: 700px;
-	}
-}
-
-@media (max-width: 992px) {
-	.legacy-page .code-review + .CodeMirror {
-		width: 480px;
-	}
-}
-
-@media (max-width: 768px) {
-	.legacy-page .code-review + .CodeMirror {
-		width: 440px;
-	}
-}
-
-@media (max-width: 616px) {
-	.legacy-page .code-review + .CodeMirror {
-		width: 60%;
-	}
+	width: auto;
 }
 
 .legacy-page .exercise__reviews {
