--- a/src/Frontend/src/components/flashcards/UnitPage/unitPage.less
+++ b/src/Frontend/src/components/flashcards/UnitPage/unitPage.less
@@ -17,7 +17,12 @@
 }
 
 .guidesContainer {
+  max-width: 720px;
   margin-left: 28px;
+}
+
+.footer {
+  max-width: 720px;
 }
 
 @media (max-width: @maxPhoneWidth) {
