--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -1,19 +1,16 @@
-@import "../../../variables";
-
-@pageWrapperLaptopPadding: 56px;
-@maxPageWrapperWidth: calc(@maxContentWidth - @maxNavigationMenuWidth);
+@import "./courseVariables";
 
 .root {
   background-color: @backgroundGray;
   min-height: calc(100vh - @headerHeight);
 }
 
-.slideWrapper {
+.rootWrapper {
   width: 100%;
   min-height: calc(100vh - @headerHeight - @headerDividerHeight);
   z-index: 0;
 
-  padding: 16px 0;
+  padding: 16px 0 @laptopSlidePadding 0;
 
   background-color: @backgroundGray;
 }
@@ -32,51 +29,56 @@
 }
 
 .slide {
-  min-height: 530px;
-
-  border-radius: 24px;
-
-  margin-bottom: 40px;
-
-  padding: 16px 24px;
-
+  margin-bottom: 15px;
+  overflow: hidden;
   background-color: @white;
 }
 
 .navigationButtonsWrapper {
+  margin-bottom: 15px;
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 40px;
+  justify-content: space-evenly;
 }
 
-.slideWrapper.withoutNavigation {
+.commentsWrapper {
+  background-color: @white;
+  margin-bottom: 32px;
+}
+
+.rootWrapper.withoutNavigation {
   position: relative;
 
   width: 100%;
   max-width: 100vw;
 
   margin: 0;
+
+  .slide {
+    border-radius: 0;
+  }
+
+  .commentsWrapper {
+    border-radius: 0;
+  }
 }
 
 .slideButton {
-  padding: 10px 20px;
+  padding: 4px 16px;
 
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 32px;
 
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 14px;
+  line-height: 20px;
   text-align: center;
 }
 
 .disabledSlideButton {
-  .slideButton;
   background-color: @whiteSmoke;
   color: @disabledColor;
 }
 
 .previousSlideButton {
-  .slideButton;
   background-color: @white;
   color: @black;
 }
@@ -84,17 +86,16 @@
 .previousSlideButton:hover, .previousSlideButton:focus {
   text-decoration: none;
   color: @black;
-  background-color: @grayWhite;
+  background-color: @whiteSmoke;
 }
 
 .previousSlideButton:active {
   text-decoration: none;
   color: @black;
-  background-color: @greySmoke;
+  background-color: @lightGrey;
 }
 
 .nextSlideButton {
-  .slideButton;
   border: 1px solid @blueSmoke;
   color: @white;
   background-color: @blueSmoke;
@@ -110,15 +111,6 @@
   color: @white;
   background-color: @darkBlue;
   text-decoration: none;
-}
-
-.commentsWrapper {
-  border-radius: 24px;
-
-  padding: 40px 56px;
-  margin-bottom: 40px;
-
-  background-color: @white;
 }
 
 .footer {
@@ -137,65 +129,86 @@
 }
 
 @media (min-width: @minTabletWidth) {
-  .slideWrapper {
+  .rootWrapper {
     width: @tabletSlideWidth;
     max-width: @tabletSlideWidth;
     margin: auto;
 
-    padding: 24px 0;
+    padding: @tabletSlidePadding 0 calc(@tabletSlidePadding * 2 + @additionalFooterMargins) 0;
 
     z-index: unset;
   }
 
-  .slide {
-    padding: 24px;
-  }
-
-  .title{
+  .title {
     font-size: 40px;
     line-height: 48px;
-    margin-bottom: 24px;
+    margin-bottom: @tabletSlidePadding;
   }
 
-  .footer{
-    font-size: 14px;
-    line-height: 14px;
+  .slide {
+    border-radius: @tabletSlidePadding;
+    margin-bottom: @tabletSlidePadding;
+  }
+
+  .navigationButtonsWrapper {
+    margin-bottom: @tabletSlidePadding;
+    justify-content: space-between;
+  }
+
+  .slideButton {
+    padding: 10px 20px;
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  .commentsWrapper {
+    margin-bottom: @tabletSlidePadding * 2;
+    border-radius: @tabletSlidePadding;
+  }
+
+  .withPaddings {
+    padding-left: @tabletSlidePadding;
+    padding-right: @tabletSlidePadding;
+    padding-bottom: @tabletSlidePadding;
   }
 }
 
 @media (min-width: @minLaptopWidth) {
-  .slideWrapper {
+  .rootWrapper {
     width: @laptopSlideWidth;
     max-width: @laptopSlideWidth;
     margin-left: calc(@navigationMenuWidth + (100vw - @navigationMenuWidth - @laptopSlideWidth) / 2);
-    padding: 40px 0;
+    padding: @laptopSlidePadding 0 calc(@desktopSlidePadding + @additionalFooterMargins) 0;
+  }
+
+  .title {
+    margin-bottom: @laptopSlidePadding;
   }
 
   .slide {
-    padding: 40px 40px 40px 56px;
+    margin-bottom: @laptopSlidePadding;
   }
 
-  .title{
-    margin-bottom: 40px;
+  .navigationButtonsWrapper {
+    margin-bottom: @laptopSlidePadding;
+  }
+
+  .commentsWrapper {
+    margin-bottom: @desktopSlidePadding;
   }
 }
 
 @media (min-width: @navigationGrowthWidth) {
-  .slideWrapper {
+  .rootWrapper {
     margin-left: calc(@maxNavigationMenuWidth + (100vw - @maxNavigationMenuWidth - @laptopSlideWidth) / 2);
   }
 }
 
 @media (min-width: @minDesktopWidth) {
-  .slideWrapper {
+  .rootWrapper {
     width: @desktopSlideWidth;
     max-width: @desktopSlideWidth;
 
     margin-left: calc(@maxNavigationMenuWidth + (100vw - @maxNavigationMenuWidth - @desktopSlideWidth) / 2);
-  }
-
-  .slide {
-    padding-left: @pageWrapperLaptopPadding;
-    padding-right: @pageWrapperLaptopPadding;
   }
 }
