--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -1,4 +1,4 @@
-@maxContentWidth: 1400px;
+@maxContentWidth: 720px;
 @maxLaptopWidth: 1280px;
 @maxTabletWidth: 991px;
 @maxPhoneWidth: 767px;
@@ -7,6 +7,8 @@
 @laptopSlideWidth: 880px;
 @tabletSlideWidth: 752px;
 @mobileSlideWidth: 100%;
+
+@maxTextWidth: @maxContentWidth;
 
 @minDesktopWidth: 1600px;
 @minLaptopWidth: 1280px;
@@ -32,6 +34,8 @@
 @likeColor: #D70C17;
 @accentColor: #F69C00;
 @lightYellow: #FFF0BC;
+@orange: #D97E00;
+@lightOrange:#f0d196;
 @successColor: #228007;
 @progressBarGreen: #3F9726;
 @green: #5cb85c;
