Added fixed size for 404 not found page

--- a/src/Frontend/src/components/common/Error/style.less
+++ b/src/Frontend/src/components/common/Error/style.less
@@ -10,7 +10,7 @@
   width: auto;
   height: auto;
   margin: 40px auto;
-  max-width: calc(@maxContentWidth - 300px);
+  max-width: 1000px;
 
   @media (max-width: @maxLaptopWidth) {
     margin: 20px auto;
