--- a/src/uLearn.Web/Content/antiplagiarism.css
+++ b/src/uLearn.Web/Content/antiplagiarism.css
@@ -2,6 +2,7 @@
 
 .legacy-page .antiplagiarism-status {
     background-color: #f7f7f7;
+	border-radius: 8px;
     padding: 11px 18px;
     color: #333;
     font-size: 13pt;
