Removed unused styles, fixed overflow bug in codeMirror styles

--- a/src/Frontend/src/components/course/Course/Slide/Blocks/CodeMirror/CodeMirror.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/CodeMirror/CodeMirror.less
@@ -11,8 +11,11 @@
   border-radius: 8px;
   background-color: @white;
 
+  font-family: monospace;
   font-size: 10px;
   line-height: 20px;
+
+  overflow: hidden;
 }
 
 @media (min-width: @minTabletWidth) {
