renamed slide-container to slide to apply styles

--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -14,7 +14,7 @@
 
 	ViewBag.Meta = Model.Slide.Meta;
 }
-<div class="slide-container">
+<div class="slide">
 @if (!string.IsNullOrEmpty(Model.Error))
 {
 	<p class="alert alert-danger">@Model.Error</p>
