--- a/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
+++ b/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
@@ -6,7 +6,7 @@
 }
 @if (!Model.IsLti)
 {
-	<div class="slide-container">
+	<div class="slide">
 		<h2 class='page-header'>Решения</h2>
 		@AcceptedSolutionsHtml.AcceptedSolutions(Model)
 	</div>
