Removed margins from last paragraph in video annotations

--- a/src/Frontend/src/components/course/Course/Slide/Blocks/Video/Video.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/Video/Video.less
@@ -15,8 +15,12 @@
   height: 100%;
 }
 
+.withoutMargins {
+  margin: 0;
+}
+
 h3.annotationTitle {
-  &.closed{
+  &.closed {
     margin-top: 0;
     margin-bottom: 0;
   }
